--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "./"
               }
             ],
             "styles": [
